# dynostatic-buffer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  clang-format  clang-tidy  suppressions.txt
.github/workflows/: ci.yml
docs/: README.md  api.rst  conf.py  index.rst  requirements.txt
examples/: basic_example.c
scripts/clang-tidy/: run-clang-tidy.sh
scripts/cmake/: generate_doc.cmake
scripts/doxygen/: Doxyfile
scripts/lcov/: run_coverage.sh
scripts/uncrustify/: check_code.py  code_style.cfg  files_to_check.json
sources/: ds-defs.h
tests/unit/: CMakeLists.txt  initialization_tests.cpp  utests-alligment.cpp  utests-calloc.cpp  utests-common.cpp  utests-common.hpp  utests-free.cpp  utests-getters.cpp  utests-init.cpp  utests-malloc.cpp  utests-memory-usage.cpp  utests-monte-carlo-malloc.cpp  utests-monte-carlo-realloc.cpp  utests-multi-alloc.cpp  utests-realloc.cpp  utests-safe-memory-copy.cpp  utests-safe-memory-set.cpp
tests/utils/: gtest_out.hpp  logger.hpp
